Separated css files | corrected wrong email on contact page | fixed donate button top margin too large when page is small | fixed about page not working properly when page is too small

--- a/res/main.css
+++ b/res/main.css
@@ -6,21 +6,6 @@
     }
 }
 
-#about_blurb
-{
-    width: 40%;
-    margin-left: 10%;
-    padding-bottom: 11.6em;
-}
-
-#about_blurb_title
-{
-    font-weight: bolder;
-    padding-top: 4em;
-    font-size: 1.5em;
-    margin-left: 10%;
-}
-
 #contact_blurb
 {
     padding-top: 4em;
@@ -41,41 +26,10 @@
     margin-left: 10%;
 }
 
-#mission_blurb_title
-{
-    font-weight: bolder;
-    float: right;
-    padding-top: 8em;
-    font-size: 1.5em;
-    margin-right: 10%;
-    width: 40%;
-    padding-bottom: 1em;
-}
-
-#mission_blurb
-{
-    float: right;
-    width: 40%;
-    margin-right: 10%;
-}
-
-#cello_blurb
-{
-    margin-top: 1em;
-    text-align: center;
-    margin-bottom: 1em;
-}
-
 #footer
 {
     background-color: #D2D2D2;
     width: 100%;
-}
-
-#orchestra_image
-{
-    float: right;
-    width: 45%;
 }
 
 #secondary_title
@@ -87,17 +41,6 @@
     font-size: 2em;
 }
 
-#spacer
-{
-    padding-top: 33.5em;
-}
-
-#teaching_image
-{
-    width: 45%;
-    float: left;
-}
-
 #lessons_blurb_title
 {
     font-weight: bolder;
@@ -106,88 +49,9 @@
     margin-bottom: 1em;
 }
 
-#main_page_mission
-{
-    margin-top: 2em;
-    margin-left: 10%;
-    font-size: 4em;
-    margin-bottom: 1.5em;
-}
-
-#main_page_mission span
-{
-    font-size: 0.5em;
-}
-
-#navigation_right
-{
-    float: right;
-}
-
-#navigation_right ul li
-{
-    padding-top: 1.5em;
-}
-
-#trio_image
-{
-    width: 100%;
-}
-
 #wrapper
 {
     min-width: 1280px;
-}
-
-.background_image
-{
-    float: right;
-    width: 43%;
-    transition: 1s;
-}
-
-.cello_image
-{
-    float: left;
-    height: 25em;
-}
-
-.background_image:hover
-{
-    transform: scale(1.03);
-}
-
-.primary_button
-{
-    margin-top: 1em;
-    display: block;
-    background: palevioletred;
-    padding: 0.5em;
-    width: 6.5em;
-    font-size: 0.3em;
-    color: white;
-    transition: 0.5s;
-}
-
-.primary_button:hover
-{
-    background: #F890B3;
-}
-
-.primary_button span
-{
-    font-weight: bold;
-}
-
-.navbar
-{
-    width: 60%;
-    margin: 0 auto;
-}
-
-.nav_divider
-{
-    background: black;
 }
 
 .logo
@@ -216,16 +80,6 @@ a
     text-decoration: none;
 }
 
-body
-{
-    
-}
-
-header
-{
-    
-}
-
 header::after
 {
     content: '';
@@ -243,49 +97,6 @@ footer
     display: none;
     position: fixed;
     width: 60%;
-}
-
-nav
-{
-    float: left;
-}
-
-nav ul
-{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-nav li
-{
-    padding-top: 1.5em;
-    display: inline-block;
-    margin-left: 50px;
-    position: relative;
-    transition: 0.5s;
-}
-
-nav li:hover
-{
-    transform: scale(1.15);
-}
-
-nav a
-{
-    text-decoration: none;
-    text-transform: uppercase;
-    color: gray;
-}
-
-nav a:hover
-{
-    color: black;
-}
-
-p
-{
-    
 }
 
 *
